--- a/level1/CMakeLists.txt
+++ b/level1/CMakeLists.txt
@@ -1,5 +1,14 @@
 project(level1)
 
+include_directories(../deps/include)
+# Specify LIB_PATH in Terminal
+link_libraries("${LIB_PATH}/libncursesw.a"
+        "${LIB_PATH}/libncursesw.dll.a"
+        "${LIB_PATH}/libpanelw.a"
+        "${LIB_PATH}/libpanelw.dll.a"
+        "${LIB_PATH}/libformw.a"
+        "${LIB_PATH}/libformw.dll.a"
+        "${LIB_PATH}/libmenuw.a")
 add_executable(p01_running_letter p01_running_letter/main.c)
 
 add_executable(p02_is_prime p02_is_prime/main.c)
