--- a/level1/CMakeLists.txt
+++ b/level1/CMakeLists.txt
@@ -27,4 +27,9 @@ add_executable(p08_push_boxes p08_push_boxes/main.c)
 
 add_executable(p09_linked_list p09_linked_list/main.c)
 
-add_executable(p10_warehouse p10_warehouse/main.c)
+add_executable(p10_warehouse p10_warehouse/main.c
+        p10_warehouse/item.h
+        p10_warehouse/item.c
+        p10_warehouse/ui.h
+        p10_warehouse/ui.c
+)
